--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "publish": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
     "firebase": "^9.14.0",
